--- a/compliance/regulatory/offering-home.yml
+++ b/compliance/regulatory/offering-home.yml
@@ -10,310 +10,325 @@ metadata:
   ms.subservice: subservice
   ms.topic: hub-page
   ms.collection:
-  - M365-security-compliance
-  - MS-Compliance
+    - M365-security-compliance
+    - MS-Compliance
   author: robmazz
   ms.author: robmazz
   ms.date: 11/30/2020
   localization_priority: Normal
-  ms.openlocfilehash: e3604114977188d8c74bd3c8a3d283e8e98aaf11
-  ms.sourcegitcommit: 81522892bcb66641eddb8cfa85c1160c689e2599
-  ms.translationtype: MT
-  ms.contentlocale: zh-TW
-  ms.lasthandoff: 02/01/2021
-  ms.locfileid: "50068635"
 conceptualContent:
   title: Microsoft 合規性方案
-  summary: Microsoft 365、Azure、Dynamics 365、Power Platform 及其他服務的資訊，以協助您瞭解資料收集和使用的國家、地區和行業特定的規章。
+  summary: Microsoft 365、Azure、Dynamics 365、Power Platform 及其他服務的資訊，以協助您進行資料收集和使用的國家、地區和行業特定的規章。
   items:
-  - title: 全域
-    links:
-    - url: offering-cis-benchmark.md
-      itemType: reference
-      text: CIS 基準
-    - url: offering-ISO-20000-1-2011.md
-      itemType: reference
-      text: ISO 20000-1:2011
-    - url: offering-ISO-22301.md
-      itemType: reference
-      text: ISO 22301
-    - url: offering-ISO-27001.md
-      itemType: reference
-      text: ISO 27001
-  - title: 全域
-    links:
-    - url: offering-ISO-27017.md
-      itemType: reference
-      text: ISO 27017
-    - url: offering-ISO-27018.md
-      itemType: reference
-      text: ISO 27018
-    - url: offering-soc.md
-      itemType: reference
-      text: SOC
-    - url: offering-wcag-2-1.md
-      itemType: reference
-      text: WCAG
-  - title: 美國政府
-    links:
-    - url: offering-cjis.md
-      itemType: reference
-      text: CJIS
-    - url: offering-dfars.md
-      itemType: reference
-      text: DFARS
-    - url: offering-dod-disa-l2-l4-l5.md
-      itemType: reference
-      text: DoD DISA L2，L4，L5
-    - url: offering-doe-10-cfr-part-810.md
-      itemType: reference
-      text: DoE 10 CFR Part 810
-    - url: offering-ear.md
-      itemType: reference
-      text: 'EAR (美國出口 Adm。 Reg ) '
-    - url: offering-fedramp.md
-      itemType: reference
-      text: FedRAMP
-  - title: 美國政府
-    links:
-    - url: offering-fips-140-2.md
-      itemType: reference
-      text: FIPS 140-2
-    - url: offering-irs-1075.md
-      itemType: reference
-      text: IRS 1075
-    - url: offering-itar.md
-      itemType: reference
-      text: ITAR
-    - url: offering-nist-sp-800-171.md
-      itemType: reference
-      text: NIST 800-171
-    - url: offering-nist-csf.md
-      itemType: reference
-      text: NIST CSF
-    - url: offering-section-508-vpats.md
-      itemType: reference
-      text: Section 508 VPATS
-  - title: 產業
-    links:
-    - url: offering-23-nycrr-part-500.md
-      itemType: reference
-      text: 23 NYCRR Part 500
-    - url: offering-afm-dnb-netherlands.md
-      itemType: reference
-      text: AFM + DNB (荷蘭)
-    - url: offering-apra-australia.md
-      itemType: reference
-      text: APRA (澳洲)
-    - url: offering-amf-acpr-france.md
-      itemType: reference
-      text: AMF 和 ACPR (法國)
-    - url: offering-cftc-1-31-us.md
-      itemType: reference
-      text: CFTC 1.31 (美國)
-    - url: offering-eba-eu.md
-      itemType: reference
-      text: EBA (歐盟)
-    - url: offering-fda-cfr-title-21-part-11.md
-      itemType: reference
-      text: FDA CFR Title 21 Part 11
-  - title: 產業
-    links:
-    - url: offering-ferpa.md
-      itemType: reference
-      text: FERPA
-    - url: offering-ffiec-us.md
-      itemType: reference
-      text: FFIEC (美國)
-    - url: offering-finma-switzerland.md
-      itemType: reference
-      text: FINMA (瑞士)
-    - url: offering-finra-4511.md
-      itemType: reference
-      text: FINRA 4511
-    - url: offering-fisc-japan.md
-      itemType: reference
-      text: FISC (日本)
-    - url: offering-fsa-denmark.md
-      itemType: reference
-      text: FSA (丹麥)
-    - url: offering-glba.md
-      itemType: reference
-      text: GLBA
-  - title: 產業
-    links:
-    - url: offering-gxp.md
-      itemType: reference
-      text: GxP
-    - url: offering-hds-france.md
-      itemType: reference
-      text: HDS (法國)
-    - url: offering-hipaa-hitech.md
-      itemType: reference
-      text: HIPAA/高科技
-    - url: offering-hitrust.md
-      itemType: reference
-      text: HITRUST
-    - url: offering-knf-poland.md
-      itemType: reference
-      text: KNF (波蘭)
-    - url: offering-mas-abs-singapore.md
-      itemType: reference
-      text: MAS + ABS (新加坡)
-  - title: 產業
-    links:
-    - url: offering-nbb-fsma-belgium.md
-      itemType: reference
-      text: NBB + FSMA (比利時)
-    - url: offering-nen-7510-netherlands.md
-      itemType: reference
-      text: NEN-7510 (荷蘭)
-    - url: offering-osfi-canada.md
-      itemType: reference
-      text: OSFI (加拿大)
-    - url: offering-rbi-irdai-india.md
-      itemType: reference
-      text: RBI + IRDAI (印度)
-    - url: offering-sec-17a-4.md
-      itemType: reference
-      text: SEC 17a-4
-    - url: offering-sox.md
-      itemType: reference
-      text: SOX
-    - url: offering-trusight.md
-      itemType: reference
-      text: TruSight
-  - title: 地區
-    links:
-    - url: offering-bir-2012-netherlands.md
-      itemType: reference
-      text: BIR 2012 (荷蘭)
-    - url: offering-c5-germany.md
-      itemType: reference
-      text: C5 (德國)
-    - url: offering-ccpa.md
-      itemType: reference
-      text: 'CCPA (美國-加州) '
-    - url: offering-irap-australia.md
-      itemType: reference
-      text: IRAP (澳洲)
-    - url: offering-cs-mark-gold-japan.md
-      itemType: reference
-      text: 'CS 符號金牌 (日本) '
-    - url: https://www.trustcenter.cn/compliance/default.html#DJCP
-      itemType: reference
-      text: DJCP (中國)
-    - url: offering-en-301-549-eu.md
-      itemType: reference
-      text: EN 301 549 (歐盟)
-    - url: offering-ens-spain.md
-      itemType: reference
-      text: ENS (西班牙)
-  - title: 地區
-    links:
-    - url: offering-eu-model-clauses.md
-      itemType: reference
-      text: 歐盟示範條款
-    - url: offering-eu-us-privacy-shield.md
-      itemType: reference
-      text: 歐盟-US 隱私權防護板
-    - url: https://www.trustcenter.cn/compliance/default.html#GB18030
-      itemType: reference
-      text: GB 18030 (中國)
-    - url: gdpr.md
-      itemType: reference
-      text: GDPR (歐盟)
-    - url: offering-g-cloud-uk.md
-      itemType: reference
-      text: G-Cloud (英國)
-    - url: https://www.idw.de/the-idw/about-the-idw
-      itemType: reference
-      text: IDW PS 951 (德國)
-    - url: offering-lopd-spain.md
-      itemType: reference
-      text: LOPD (西班牙)
-  - title: 地區
-    links:
-    - url: offering-meity-india.md
-      itemType: reference
-      text: MeitY (印度)
-    - url: offering-mtcs-singapore.md
-      itemType: reference
-      text: MTCS (新加坡)
-    - url: offering-my-number-act-japan.md
-      itemType: reference
-      text: My Number (日本)
-    - url: offering-nz-cc-framework-nz.md
-      itemType: reference
-      text: NZ CC Framework (紐西蘭)
-    - url: offering-pasf-uk.md
-      itemType: reference
-      text: PASF (英國)
-    - url: offering-pdpa-argentina.md
-      itemType: reference
-      text: PDPA (阿根廷)
-    - url: offering-russia-data-localization.md
-      itemType: reference
-      text: 個人資料當地語系化 (俄羅斯)
-    - url: https://aka.ms/TRUCS-Compliance
-      itemType: reference
-      text: TRUCS (中國)
-additionalContent:
-  sections:
-  - title: 專用於 Azure 的規範服務
-    summary: 適用于 Azure 的規範服務，可協助您的組織遵守管理資料集合及使用的本國、地區和行業特定需求。
-    items:
     - title: 全域
       links:
-      - text: CSA-STAR 證明
-        url: offering-csa-star-attestation.md
-      - text: CSA-STAR 認證
-        url: offering-csa-star-certification.md
-      - text: CSA STAR 自我評估
-        url: offering-csa-star-self-assessment.md
-      - text: ISO 27701
-        url: offering-ISO-27701.md
-      - text: ISO-9001
-        url: offering-ISO-9001.md
+        - url: offering-cis-benchmark.md
+          itemType: reference
+          text: CIS 基準
+        - url: /azure/compliance/offerings/offering-csa-star-attestation
+          itemType: reference
+          text: CSA-STAR 證明
+        - url: /azure/compliance/offerings/offering-csa-star-certification
+          itemType: reference
+          text: CSA-STAR 認證
+        - url: /azure/compliance/offerings/offering-csa-star-self-assessment
+          itemType: reference
+          text: CSA STAR 自我評估
+        - url: offering-ISO-20000-1-2011.md
+          itemType: reference
+          text: 'ISO 20000-1:2011'
+        - url: /azure/compliance/offerings/offering-iso-20000-1
+          itemType: reference
+          text: ISO 22301
+        - url: offering-ISO-27001.md
+          itemType: reference
+          text: ISO 27001
+    - title: 全域
+      links:
+        - url: offering-ISO-27017.md
+          itemType: reference
+          text: ISO 27017
+        - url: offering-ISO-27018.md
+          itemType: reference
+          text: ISO 27018
+        - url: /azure/compliance/offerings/offering-iso-27701
+          itemType: reference
+          text: ISO 27701
+        - url: /azure/compliance/offerings/offering-iso-9001
+          itemType: reference
+          text: ISO 9001
+        - url: offering-soc.md
+          itemType: reference
+          text: SOC
+        - url: offering-wcag-2-1.md
+          itemType: reference
+          text: WCAG
     - title: 美國政府
       links:
-      - text: CNSSI 1253
-        url: offering-cnssi-1253.md
+        - url: offering-cjis.md
+          itemType: reference
+          text: CJIS
+        - url: /azure/compliance/offerings/offering-cnssi-1253
+          itemType: reference
+          text: CNSSI 1253
+        - url: offering-dfars.md
+          itemType: reference
+          text: DFARS
+        - url: offering-dod-disa-l2-l4-l5.md
+          itemType: reference
+          text: DoD DISA L2，L4，L5
+        - url: offering-doe-10-cfr-part-810.md
+          itemType: reference
+          text: DoE 10 CFR Part 810
+        - url: /azure/compliance/offerings/offering-doe-10-cfr-part-810
+          itemType: reference
+          text: 'EAR (美國出口 Adm。 Reg ) '
+        - url: offering-fedramp.md
+          itemType: reference
+          text: FedRAMP
+    - title: 美國政府
+      links:
+        - url: offering-fips-140-2.md
+          itemType: reference
+          text: FIPS 140-2
+        - url: offering-irs-1075.md
+          itemType: reference
+          text: IRS 1075
+        - url: offering-itar.md
+          itemType: reference
+          text: ITAR
+        - url: offering-nist-sp-800-171.md
+          itemType: reference
+          text: NIST 800-171
+        - url: offering-nist-csf.md
+          itemType: reference
+          text: NIST CSF
+        - url: offering-section-508-vpats.md
+          itemType: reference
+          text: Section 508 VPATS
     - title: 產業
       links:
-      - text: CDSA
-        url: offering-cdsa.md
-      - text: DPP (英國)
-        url: offering-dpp-uk.md
-      - text: FACT (英國)
-        url: offering-fact-uk.md
-      - text: FCA (英國)
-        url: offering-fca-uk.md
-      - text: MARS-E
-        url: offering-mars-e.md
-      - text: MPAA
-        url: offering-mpaa.md
-      - text: NERC
-        url: offering-nerc-cip.md
-      - text: PCI DSS
-        url: offering-pci-dss.md
-      - text: SEC 法規 SCI
-        url: offering-sec-reg-sci.md
-      - text: 共用評估
-        url: offering-shared-assessments.md
-      - text: TISAX (德國)
-        url: offering-tisax-germany.md
+        - url: offering-23-nycrr-part-500.md
+          itemType: reference
+          text: 23 NYCRR Part 500
+        - url: offering-afm-dnb-netherlands.md
+          itemType: reference
+          text: AFM + DNB (荷蘭)
+        - url: offering-apra-australia.md
+          itemType: reference
+          text: APRA (澳洲)
+        - url: offering-amf-acpr-france.md
+          itemType: reference
+          text: AMF 和 ACPR (法國)
+        - url: /azure/compliance/offerings/offering-cdsa
+          itemType: reference
+          text: CDSA
+        - url: offering-cftc-1-31-us.md
+          itemType: reference
+          text: CFTC 1.31 (美國)
+        - url: /azure/compliance/offerings/offering-dpp-uk
+          itemType: reference
+          text: DPP (英國)
+        - url: offering-eba-eu.md
+          itemType: reference
+          text: EBA (歐盟)
+        - url: /azure/compliance/offerings/offering-fact-uk
+          itemType: reference
+          text: FACT (英國)
+        - url: /azure/compliance/offerings/offering-fca-pra-uk
+          itemType: reference
+          text: 'FCA + PRA (UK) '
+        - url: offering-fda-cfr-title-21-part-11.md
+          itemType: reference
+          text: FDA CFR Title 21 Part 11
+    - title: 產業
+      links:
+        - url: offering-ferpa.md
+          itemType: reference
+          text: FERPA
+        - url: offering-ffiec-us.md
+          itemType: reference
+          text: FFIEC (美國)
+        - url: offering-finma-switzerland.md
+          itemType: reference
+          text: FINMA (瑞士)
+        - url: offering-finra-4511.md
+          itemType: reference
+          text: FINRA 4511
+        - url: offering-fisc-japan.md
+          itemType: reference
+          text: FISC (日本)
+        - url: offering-fsa-denmark.md
+          itemType: reference
+          text: FSA (丹麥)
+        - url: offering-glba.md
+          itemType: reference
+          text: GLBA
+        - url: /azure/compliance/offerings/offering-gsma
+          itemType: reference
+          text: GSMA
+        - url: offering-gxp.md
+          itemType: reference
+          text: GxP
+        - url: offering-hds-france.md
+          itemType: reference
+          text: HDS (法國)
+        - url: offering-hipaa-hitech.md
+          itemType: reference
+          text: HIPAA/高科技
+        - url: offering-hitrust.md
+          itemType: reference
+          text: HITRUST
+    - title: 產業
+      links:
+        - url: offering-knf-poland.md
+          itemType: reference
+          text: KNF (波蘭)
+        - url: /azure/compliance/offerings/offering-mars-e-us
+          itemType: reference
+          text: '火星-E (US) '
+        - url: offering-mas-abs-singapore.md
+          itemType: reference
+          text: MAS + ABS (新加坡)
+        - url: /azure/compliance/offerings/offering-mpa
+          itemType: reference
+          text: M p a
+        - url: offering-nbb-fsma-belgium.md
+          itemType: reference
+          text: NBB + FSMA (比利時)
+        - url: offering-nen-7510-netherlands.md
+          itemType: reference
+          text: NEN-7510 (荷蘭)
+        - url: /azure/compliance/offerings/offering-nerc
+          itemType: reference
+          text: NERC
+        - url: offering-osfi-canada.md
+          itemType: reference
+          text: OSFI (加拿大)
+        - url: /azure/compliance/offerings/offering-pci-3ds
+          itemType: reference
+          text: PCI-X 3DS
+        - url: offering-PCI-DSS.md
+          itemType: reference
+          text: PCI-DSS
+        - url: offering-rbi-irdai-india.md
+          itemType: reference
+          text: RBI + IRDAI (印度)
+    - title: 產業
+      links:
+        - url: offering-sec-17a-4.md
+          itemType: reference
+          text: SEC 17a-4
+        - url: /azure/compliance/offerings/offering-sec-reg-sci-us
+          itemType: reference
+          text: 'SEC 法規 SCI (US) '
+        - url: /azure/compliance/offerings/offering-shared-assessments
+          itemType: reference
+          text: 共用評估
+        - url: offering-sox.md
+          itemType: reference
+          text: SOX
+        - url: /azure/compliance/offerings/offering-tisax
+          itemType: reference
+          text: TISAX (德國)
+        - url: offering-trusight.md
+          itemType: reference
+          text: TruSight
     - title: 地區
       links:
-      - text: ABS OSPAR (新加坡)
-        url: offering-abs-ospar.md
-      - text: 加拿大隱私權法
-        url: offering-canadian-privacy-laws.md
-      - text: Cyber Essentials Plus (英國)
-        url: offering-cyber-essentials-plus-uk.md
-      - text: ENISA IAF (EU)
-        url: offering-enisa.md
-      - text: ISMS (韓國)
-        url: offering-ISMS-korea.md
-      - text: IT Grundschutz Workbook (德國)
-        url: offering-it-grundschutz-workbook-germany.md
+        - url: /azure/compliance/offerings/offering-ospar-singapore
+          itemType: reference
+          text: ABS OSPAR (新加坡)
+        - url: offering-bir-2012-netherlands.md
+          itemType: reference
+          text: BIR 2012 (荷蘭)
+        - url: offering-c5-germany.md
+          itemType: reference
+          text: C5 (德國)
+        - url: /azure/compliance/offerings/offering-canada-privacy-laws
+          itemType: reference
+          text: 加拿大隱私權法
+        - url: offering-ccpa.md
+          itemType: reference
+          text: 'CCPA (美國-加州) '
+        - url: /azure/compliance/offerings/offering-uk-cyber-essentials-plus
+          itemType: reference
+          text: Cyber Essentials Plus (英國)
+        - url: offering-irap-australia.md
+          itemType: reference
+          text: IRAP (澳洲)
+        - url: offering-cs-mark-gold-japan.md
+          itemType: reference
+          text: 'CS 符號金牌 (日本) '
+    - title: 地區
+      links:
+        - url: 'https://www.trustcenter.cn/compliance/default.html#DJCP'
+          itemType: reference
+          text: DJCP (中國)
+        - url: offering-en-301-549-eu.md
+          itemType: reference
+          text: EN 301 549 (歐盟)
+        - url: /azure/compliance/offerings/offering-eu-enisa-iaf
+          itemType: reference
+          text: ENISA IAF (EU)
+        - url: offering-ens-spain.md
+          itemType: reference
+          text: ENS (西班牙)
+        - url: offering-eu-model-clauses.md
+          itemType: reference
+          text: 歐盟示範條款
+        - url: offering-eu-us-privacy-shield.md
+          itemType: reference
+          text: 歐盟-US 隱私權防護板
+        - url: 'https://www.trustcenter.cn/compliance/default.html#GB18030'
+          itemType: reference
+          text: GB 18030 (中國)
+        - url: gdpr.md
+          itemType: reference
+          text: GDPR (歐盟)
+    - title: 地區
+      links:
+        - url: offering-g-cloud-uk.md
+          itemType: reference
+          text: G-Cloud (英國)
+        - url: 'https://www.idw.de/the-idw/about-the-idw'
+          itemType: reference
+          text: IDW PS 951 (德國)
+        - url: offering-ismap.md
+          itemType: reference
+          text: 'ISMAP (日本) '
+        - url: /azure/compliance/offerings/offering-korea-k-isms
+          itemType: reference
+          text: ISMS (韓國)
+        - url: /azure/compliance/offerings/offering-germany-it-grundschutz-workbook
+          itemType: reference
+          text: 'IT-Grundschutz 活頁簿 (德國) '
+        - url: offering-lopd-spain.md
+          itemType: reference
+          text: LOPD (西班牙)
+        - url: offering-meity-india.md
+          itemType: reference
+          text: MeitY (印度)
+        - url: offering-mtcs-singapore.md
+          itemType: reference
+          text: MTCS (新加坡)
+    - title: 地區
+      links:
+        - url: offering-my-number-act-japan.md
+          itemType: reference
+          text: My Number (日本)
+        - url: offering-nz-cc-framework-nz.md
+          itemType: reference
+          text: NZ CC Framework (紐西蘭)
+        - url: /azure/compliance/offerings/offering-uk-pasf
+          itemType: reference
+          text: PASF (英國)
+        - url: offering-pdpa-argentina.md
+          itemType: reference
+          text: PDPA (阿根廷)
+        - url: offering-russia-data-localization.md
+          itemType: reference
+          text: 個人資料當地語系化 (俄羅斯)
+        - url: 'https://aka.ms/TRUCS-Compliance'
+          itemType: reference
+          text: TRUCS (中國)
